# vamp2

./: .gitignore  .gitmodules  COPYING  LICENSE  README.org  meson.build  meson_options.txt  transfer.sh  transfer_mpi.sh
include/: c_signal.h
share/: array_list_1.ref  balancer_1.ref  balancer_2.ref  binary_tree_1.ref  channel_1.ref  channel_2.ref  gprof_visualize.sh  iterator_1.ref  meson.build  mpi_caller_1.ref  mpi_caller_2.ref  mpi_caller_3.ref  mpi_simple_1.ref  mpi_simple_2.ref  mpi_simple_3.ref  mpi_switch.ref  mpirun.gdb  mpirun_gprof.sh  queue_1.ref  signal_1.ref  vamp2_ut.err  vamp2_ut.out  vegas_mpi_ut.err  vegas_mpi_ut.ref  vegas_ut.err  vegas_ut.out
src/: diagnostics.f90  io_units.f90  meson.build  vamp2.f90_serial  vegas.f90_serial
src/rng/: meson.build  rng_base.f90  rng_stream.f90
src/utils/: array_list.f90  binary_tree.f90  constants.f90  cputime.f90  diagnostics.f90  format_defs.f90  format_utils.f90  iterator.f90  logging.f90  meson.build  numeric_utils.f90  queue.f90  signal.c  signal.f90
src/vegas/mpi/: balancer.f90  balancer_channel.f90  balancer_simple.f90  channel_balancer.f90  meson.build  partition.f90  request.f90  request_balancer.f90  request_callback.f90  request_caller.f90  request_simple.f90  request_state.f90  resources.f90  vamp2.f90  vegas.f90
src/vegas/serial/: vamp2.f90  vegas.f90
test/: array_list_1.f90  balancer_1.f90  balancer_2.f90  balancer_3.f90  binary_tree_1.f90  channel_1.f90  channel_2.f90  channel_3.f90  helpers.bash  ice-gfortran.f90  iterator_1.f90  logging_1.f90  meson.build  mpi_caller_1.f90  mpi_caller_2.f90  mpi_caller_3.f90  mpi_caller_4.f90  mpi_comm_dup.f90  mpi_distribute.f90  mpi_simple.f90  mpi_simple_1.f90  mpi_simple_2.f90  mpi_simple_3.f90  mpi_switch.f90  queue_1.f90  result_handler.f90  signal.bats  signal_1.f90  signal_2.f90  signal_3.f90  test_utils.f90  unit_test.py  vamp2_load_ut.f90  vamp2_load_ut_2.f90  vamp2_mpi_ut.f90  vamp2_simple_2.f90  vamp2_simple_ut.f90  vamp2_ut.f90  vamp2_uti.f90  vegas_mpi_ut.f90  (+2 more)
test/benchmark/: benchmark_1.f90  benchmark_func.f90  benchmark_handler.f90  benchmark_utils.f90  meson.build
