project('vamp2', 'fortran',
  version : '0.1',
  default_options : ['warning_level=3'])

# cp = find_program('cp')
# gen = generator(cp,
#                 output  : '@BASENAME@.f90',
#                 arguments : ['@INPUT@', '@OUTPUT@'])
# vegas_src = gen.process('src/vegas.f90_serial')
# vamp2_src = gen.process('src/vamp2.f90_serial')

subdir('src')
subdir('test')
 pf
