# ref_vegas = files('vegas_ut.err')
# ref_vamp2 = files('vamp2_ut.err')

# ref_vegas_mpi = files('vegas_mpi_ut.err')

ref_array_list_1 = files('array_list_1.ref')
ref_balancer_1 = files('balancer_1.ref')
ref_balancer_2 = files('balancer_2.ref')
ref_binary_tree_1 = files('binary_tree_1.ref')
ref_channel_1 = files('channel_1.ref')
ref_channel_2 = files('channel_2.ref')
ref_iterator_1 = files('iterator_1.ref')
ref_mpi_caller_1 = files('mpi_caller_1.ref')
ref_mpi_caller_2 = files('mpi_caller_2.ref')
ref_mpi_caller_3 = files('mpi_caller_3.ref')
ref_mpi_simple_1 = files('mpi_simple_1.ref')
ref_mpi_simple_2 = files('mpi_simple_2.ref')
ref_mpi_simple_3 = files('mpi_simple_3.ref')
ref_mpi_switch = files('mpi_switch.ref')
ref_queue_1 = files('queue_1.ref')
ref_signal_1 = files('signal_1.ref')
ref_vamp2_load_ut_1 = files('vamp2_load_1.ref')
ref_vamp2_load_ut_2 = files('vamp2_load_2.ref')
ref_vamp2_simple_ut_1 = files('vamp2_simple_1.ref')
ref_vamp2_simple_ut_2 = files('vamp2_simple_2.ref')
ref_vegas_mpi_ut = files('vegas_mpi_ut.ref')
# ref_vamp2_mpi_ut = files('vamp2_mpi_ut.ref')
