utils = library('utils', ['constants.f90',
                          'kinds.f90',
                          'io_units.f90',
                          'diagnostics.f90',
                          'format_defs.f90',
                          'format_utils.f90',
                          'numeric_utils.f90'])
