utils = library('utils', ['constants.f90',
                          'kinds.f90',
                          'io_units.f90',
                          'diagnostics.f90',
                          'format_defs.f90',
                          'format_utils.f90',
                          'numeric_utils.f90',
                          'array_list.f90',
                          'binary_tree.f90',
                          'iterator.f90',
                          'queue.f90',
                          'logging.f90'])


signal = library('signal', ['signal.f90',
                            'signal.c'],
                 include_directories : inc)
